# app-bundle-samples

./: .gitignore  README.md
.github/workflows/: main.yml
DynamicCodeLoadingKotlin/: .gitignore  README.md  build.gradle  gradle.properties
DynamicCodeLoadingKotlin/.google/: packaging.yaml
DynamicCodeLoadingKotlin/app/: build.gradle  proguard-rules.pro
DynamicCodeLoadingKotlin/gradle/wrapper/: gradle-wrapper.properties
DynamicCodeLoadingKotlin/storage/: build.gradle
DynamicFeatureNavigation/: NOTICE  README.md  build.gradle.kts  copy_split.sh  gradle.properties  settings.gradle
DynamicFeatureNavigation/DSL/: build.gradle  settings.gradle
DynamicFeatureNavigation/DSL/app/: build.gradle
DynamicFeatureNavigation/DSL/included/: build.gradle
DynamicFeatureNavigation/DSL/ondemand/: build.gradle
DynamicFeatureNavigation/XML/: LICENSE  README.md  build.gradle.kts  gradle.properties
DynamicFeatureNavigation/XML/app/: build.gradle.kts
DynamicFeatureNavigation/XML/dynamicfeature/: build.gradle.kts
DynamicFeatureNavigation/XML/includedgraphfeature/: build.gradle.kts
DynamicFeatureNavigation/app/: build.gradle.kts
DynamicFeatureNavigation/gradle/wrapper/: gradle-wrapper.properties
DynamicFeatures/: .gitignore  README.markdown  build.gradle  gradle.properties  settings.gradle
DynamicFeatures/.google/: packaging.yaml
DynamicFeatures/app/: build.gradle
DynamicFeatures/features/assets/: build.gradle
DynamicFeatures/features/initialInstall/: build.gradle
DynamicFeatures/features/java/: build.gradle
DynamicFeatures/features/kotlin/: build.gradle
DynamicFeatures/features/maxSdk/: build.gradle
DynamicFeatures/features/native/: build.gradle
DynamicFeatures/gradle/wrapper/: gradle-wrapper.properties
DynamicFeatures/instant/split/: build.gradle
DynamicFeatures/instant/url/: build.gradle
InstantApps/: build_all.sh
InstantApps/aab-simple/: build.gradle
InstantApps/aab-simple/.google/: packaging.yaml
InstantApps/aab-simple/app/: build.gradle
InstantApps/analytics/: build.gradle
InstantApps/analytics/.google/: packaging.yaml
InstantApps/analytics/base/: build.gradle
InstantApps/cookie-api/: build.gradle
InstantApps/cookie-api/.google/: packaging.yaml
InstantApps/cookie-api/app/: build.gradle
InstantApps/install-api/: README.md  build.gradle
InstantApps/install-api/.google/: packaging.yaml
InstantApps/install-api/app/: build.gradle
InstantApps/multi-feature-module/: build.gradle
InstantApps/service/: build.gradle
InstantApps/service/.google/: packaging.yaml
InstantApps/storage-api/: README.md  build.gradle
InstantApps/storage-api/app/: build.gradle
InstantApps/urlless/: build.gradle
InstantApps/urlless/app/: build.gradle
InstantApps/urlless/feature/: build.gradle
PlayAssetDelivery/BundletoolScriptSample/: README.md  add_packs.py  create_asset_only_bundle.sh  generate_asset_pack.py  requirements.txt
PlayAssetDelivery/NativeSample/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
PlayAssetDelivery/NativeSample/Teapot/src/main/cpp/: CMakeLists.txt  PlayAssetDeliveryUtil.cpp  PlayAssetDeliveryUtil.h  TeapotNativeActivity.cpp  TeapotRenderer.cpp  TeapotRenderer.h  Texture.cpp  Texture.h  TexturedTeapotRender.cpp  TexturedTeapotRender.h  android_debug.h  teapot.inl
PlayAssetDelivery/NativeSample/common/ndk_helper/: CMakeLists.txt  GLContext.cpp  GLContext.h  JNIHelper.cpp  JNIHelper.h  NDKHelper.h  gestureDetector.cpp  gestureDetector.h  gl3stub.cpp  interpolator.cpp  interpolator.h  perfMonitor.cpp  perfMonitor.h  sensorManager.cpp  sensorManager.h  shader.cpp  shader.h  tapCamera.cpp  tapCamera.h  vecmath.cpp  vecmath.h
PlayCoreKtx/: .gitignore  LICENSE  NOTICE  README.markdown  build.gradle  gradle.properties  settings.gradle
PlayCoreKtx/.google/: packaging.yaml
PlayCoreKtx/app/: build.gradle
PlayCoreKtx/buildSrc/: build.gradle.kts
dynamic-features/: .gitignore  build.gradle  settings.gradle
dynamic-features/.google/: packaging.yaml
instant-apps/.google/: packaging.yaml
(+236 files in other folders)
